--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Environmental protection</title>
     <link rel="stylesheet" href="css/style.css">
-
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css" />
 </head>
 
 <body>
@@ -29,7 +29,8 @@
     <section id="header" class="header">
         <h1 id="heading">Environmental</h1>
     </section>
-    <section class="content">
+    <main class="content">
+        <i class="fa fa-arrows" aria-hidden="true" style="cursor:pointer"></i>
         <p>We're going aerial pingpong no dramas as cross as a mickey mouse mate. Flat out like a bities no dramas as cross as a wobbly. Mad as a bush bash as dry as a kindie. As stands out like ford also grab us a chuck a sickie. Built like a moolah bloody
             khe sanh. Get a dog up ya chokkie how as cunning as a garbo. Lets get some show pony flamin lets throw a roadie. Come a sheila to come a cab sav.</p>
 
@@ -39,11 +40,21 @@
         <p>It'll be dinky-di come a brumby. He hasn't got a shit house with shazza got us some buckley's chance. Trent from punchy barbie where shazza got us some chuck a sickie. Mad as a swagger my hottie. As busy as a mate's rate mate stands out like a
             trackie dacks. As busy as a bathers also grab us a dipstick.</p>
 
-        <p class="credit">This placeholder text is from <a href="http://boganipsum.com">Bogan Ipsum</a></p>
-    </section>
+    </main>
+
+    <footer class="fixed_footer">
+        <div id="social">
+            <a class="facebookBtn smGlobalBtn" href="#"></a>
+            <a class="twitterBtn smGlobalBtn" href="#"></a>
+            <a class="googleplusBtn smGlobalBtn" href="#"></a>
+            <a class="tumblrBtn smGlobalBtn" href="#"></a>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+<!--Navbar https://codepen.io/rachsmith/pen/IsixL -->
+<!--Footer https://codepen.io/madshaakansson/pen/CGjcH -->
 
 </html>
