--- a/index.html
+++ b/index.html
@@ -30,15 +30,41 @@
         <h1 id="heading">Environmental</h1>
     </section>
     <main class="content">
-        <i class="fa fa-arrows" aria-hidden="true" style="cursor:pointer"></i>
-        <p>We're going aerial pingpong no dramas as cross as a mickey mouse mate. Flat out like a bities no dramas as cross as a wobbly. Mad as a bush bash as dry as a kindie. As stands out like ford also grab us a chuck a sickie. Built like a moolah bloody
-            khe sanh. Get a dog up ya chokkie how as cunning as a garbo. Lets get some show pony flamin lets throw a roadie. Come a sheila to come a cab sav.</p>
-
-        <p>Gutful of servo bloody as busy as a moolah. Built like a ropeable piece of piss built like a relo. Lets throw a two up piece of piss she'll be right brick sh*t house. Built like a dunny piece of piss lets throw a esky. She'll be right struth my
-            built like a tucker. rage on bloody built like a garbo.</p>
-
-        <p>It'll be dinky-di come a brumby. He hasn't got a shit house with shazza got us some buckley's chance. Trent from punchy barbie where shazza got us some chuck a sickie. Mad as a swagger my hottie. As busy as a mate's rate mate stands out like a
-            trackie dacks. As busy as a bathers also grab us a dipstick.</p>
+        <div class="hover08 column">
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+            <div>
+                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                <span>Hover</span>
+            </div>
+        </div>
+        </div>
 
     </main>
 
