ver 0.5 For U 4 ALL

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-            <li><span class="nav-label">Home</span></span>
+            <li><span class="nav-label">Plastic</span></span>
             </li>
-            <li><span class="nav-label">About</span></li>
-            <li><span class="nav-label">Work</span></li>
+            <li><span class="nav-label">Air</span></li>
+            <li><span class="nav-label">Water</span></li>
+            <li><span class="nav-label">Animal</span></li>
             <li><span class="nav-label">Store</span></li>
-            <li><span class="nav-label">Contact</span></li>
         </ul>
     </nav>
     <section id="header" class="header">
-        <h1 id="heading">Environmental</h1>
+        <h1 id="heading">For YOU 4 ALL</h1>
+        <h2>Plastic ｜ Air ｜ Water ｜ Animal</h2>
     </section>
-    <main class="content">
+    <main class="content"></main>
+    <!--<main class="content">
         <div class="hover08 column">
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
@@ -64,9 +66,9 @@
                 <span>Hover</span>
             </div>
         </div>
-        </div>
+      </div>-
 
-    </main>
+    </main>-->
 
     <footer class="fixed_footer">
         <div id="social">
