--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Environmental protection</title>
+    <title>For YOU 4 ALL - Environmental protection</title>
     <link rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css" />
 </head>
