ver 0.7 add new page "animal.html"

--- a/animal.html
+++ b/animal.html
@@ -21,56 +21,49 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-            <li><span class="nav-label">Plastic</span></span></li>
+            <li><span class="nav-label">Plastic</span></span>
+            </li>
             <li><span class="nav-label">Air</span></li>
             <li><span class="nav-label">Water</span></li>
-            <li><span class="nav-label"><a href="animal.html">Animal</a></span></li>
+            <li><span class="nav-label">Animal</span></li>
             <li><span class="nav-label">Store</span></li>
         </ul>
     </nav>
-    <section id="header" class="header index">
-        <h1 id="heading">For YOU 4 ALL</h1>
-        <h2>Plastic ｜ Air ｜ Water ｜ Animal</h2>
+    <section id="header" class="header animal">
+        <h1 id="heading">Animal</h1>
+        <h2>Feed it, don’t eat it.</h2>
     </section>
-    <main class="content"></main>
-    <!--<main class="content">
+    <!--<main class="content"></main>-->
+    <main class="content">
         <div class="hover08 column">
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
+                <span>鳥類</span>
             </div>
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                <span>Hover</span>
+                <span>看三...</span>
             </div>
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                <span>Hover</span>
+                <span>飛天鳥</span>
             </div>
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
+                <span>鳥哥</span>
             </div>
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
+                <span>鳥二哥</span>
             </div>
             <div>
                 <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>Hover</span>
+                <span>大鵰</span>
             </div>
         </div>
-      </div>-
+        </div>
 
-    </main>-->
+    </main>
 
     <footer class="fixed_footer">
         <div id="social">
