ver 0.8 fix nav link

--- a/animal.html
+++ b/animal.html
@@ -25,7 +25,7 @@
             </li>
             <li><span class="nav-label">Air</span></li>
             <li><span class="nav-label">Water</span></li>
-            <li><span class="nav-label">Animal</span></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
             <li><span class="nav-label">Store</span></li>
         </ul>
     </nav>
