--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><span class="nav-label">Plastic</span></span></li>
             <li><span class="nav-label">Air</span></li>
             <li><span class="nav-label">Water</span></li>
-            <li><span class="nav-label"><a href="animal.html">Animal</a></span></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
             <li><span class="nav-label">Store</span></li>
         </ul>
     </nav>
@@ -79,6 +79,9 @@
             <a class="googleplusBtn smGlobalBtn" href="#"></a>
             <a class="tumblrBtn smGlobalBtn" href="#"></a>
         </div>
+        <div class="copyright">
+            <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
+        </div><!--copyright-->
     </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
