--- a/animal.html
+++ b/animal.html
@@ -29,52 +29,44 @@
             <li><span class="nav-label">Store</span></li>
         </ul>
     </nav>
-    <section id="header" class="header animal">
-        <h1 id="heading">Animal</h1>
-        <h2>Feed it, don’t eat it.</h2>
+
+    <section class="main">
+        <section id="header" class="header animal">
+            <h1 id="heading">Animal</h1>
+            <h2>Feed it, don’t eat it.</h2>
+        </section>
+        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"></i></a>
+        <!--<main class="content"></main>-->
+        <main class="content" id="content">
+            <div class="hover08 column">
+                <div>
+                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
+                    <span>鳥類</span>
+                </div>
+                <div>
+                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
+                    <span>看三...</span>
+                </div>
+                <div>
+                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
+                    <span>飛天鳥</span>
+                </div>
+            </div>
+            </div>
+
+        </main>
+
+        <footer class="fixed_footer">
+            <div id="social">
+                <a class="facebookBtn smGlobalBtn" href="#"></a>
+                <a class="twitterBtn smGlobalBtn" href="#"></a>
+                <a class="googleplusBtn smGlobalBtn" href="#"></a>
+                <a class="tumblrBtn smGlobalBtn" href="#"></a>
+            </div>
+        </footer>
     </section>
-    <!--<main class="content"></main>-->
-    <main class="content">
-        <div class="hover08 column">
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>鳥類</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                <span>看三...</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                <span>飛天鳥</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>鳥哥</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>鳥二哥</span>
-            </div>
-            <div>
-                <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                <span>大鵰</span>
-            </div>
-        </div>
-        </div>
-
-    </main>
-
-    <footer class="fixed_footer">
-        <div id="social">
-            <a class="facebookBtn smGlobalBtn" href="#"></a>
-            <a class="twitterBtn smGlobalBtn" href="#"></a>
-            <a class="googleplusBtn smGlobalBtn" href="#"></a>
-            <a class="tumblrBtn smGlobalBtn" href="#"></a>
-        </div>
-    </footer>
-
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 <!--Navbar https://codepen.io/rachsmith/pen/IsixL -->
