ver 1.1 add bootsrap's RWD & water/air/plastic page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
     <meta charset="UTF-8">
@@ -21,11 +21,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-            <li><span class="nav-label">Plastic</span></span></li>
-            <li><span class="nav-label">Air</span></li>
-            <li><span class="nav-label">Water</span></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
             <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-            <li><span class="nav-label">Store</span></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
     <section id="header" class="header index">
@@ -88,6 +88,7 @@
     <script src="js/script.js"></script>
 </body>
 <!--Navbar https://codepen.io/rachsmith/pen/IsixL -->
+<!--Scroll Arrow https://codepen.io/FilipVitas/pen/qZpXZr-->
 <!--Footer https://codepen.io/madshaakansson/pen/CGjcH -->
 
 </html>
