--- a/plastic.html
+++ b/plastic.html
@@ -31,8 +31,8 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header animal">
-            <h1 id="heading">Animal</h1>
+        <section id="header" class="header plastic">
+            <h1 id="heading">Plastic</h1>
             <h2>Feed it, don’t eat it.</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"></i></a>
