--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
     </main>-->
 
     <footer class="fixed_footer">
-        <div id="social">
-            <a class="facebookBtn smGlobalBtn" href="#"></a>
-            <a class="twitterBtn smGlobalBtn" href="#"></a>
-            <a class="googleplusBtn smGlobalBtn" href="#"></a>
-            <a class="tumblrBtn smGlobalBtn" href="#"></a>
-        </div>
+
         <div class="copyright">
             <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
         </div><!--copyright-->
-    </footer>
+    </footer><div id="social">
+        <a class="facebookBtn smGlobalBtn" href="#"></a>
+        <a class="twitterBtn smGlobalBtn" href="#"></a>
+        <a class="googleplusBtn smGlobalBtn" href="#"></a>
+        <a class="tumblrBtn smGlobalBtn" href="#"></a>
+    </div>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
@@ -90,5 +90,6 @@
 <!--Navbar https://codepen.io/rachsmith/pen/IsixL -->
 <!--Scroll Arrow https://codepen.io/FilipVitas/pen/qZpXZr-->
 <!--Footer https://codepen.io/madshaakansson/pen/CGjcH -->
+<!--Social https://codepen.io/vpdemo/pen/WbMvQJ -->
 
 </html>
