--- a/animal.html
+++ b/animal.html
@@ -35,7 +35,7 @@
             <h1 id="heading">Animal</h1>
             <h2>Feed it, don’t eat it.</h2>
         </section>
-        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"></i></a>
+        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>In depth</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
@@ -65,14 +65,17 @@
                 </div>
           </div><!--row-->
         </main>
-
+        <div id="social">
+            <a class="facebookBtn smGlobalBtn" href="#"></a>
+            <a class="twitterBtn smGlobalBtn" href="#"></a>
+            <a class="googleplusBtn smGlobalBtn" href="#"></a>
+            <a class="tumblrBtn smGlobalBtn" href="#"></a>
+        </div>
         <footer class="fixed_footer">
-            <div id="social">
-                <a class="facebookBtn smGlobalBtn" href="#"></a>
-                <a class="twitterBtn smGlobalBtn" href="#"></a>
-                <a class="googleplusBtn smGlobalBtn" href="#"></a>
-                <a class="tumblrBtn smGlobalBtn" href="#"></a>
-            </div>
+
+            <div class="copyright">
+                <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
+            </div><!--copyright-->
         </footer>
     </section>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
