--- a/water.html
+++ b/water.html
@@ -33,15 +33,15 @@
     <section class="main">
         <section id="header" class="header water">
             <h1 id="heading">Water</h1>
-            <h2>Feed it, don’t eat it.</h2>
+            <h2>If you pollute WATER, you pollute LIFE.</h2>
         </section>
-        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"></i></a>
+        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>In depth</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                    <span>鳥類</span>
+                    <figure><img src="img/water/market.jpg" /></figure>
+                    <span>環南市場廢水</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
                     <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
@@ -65,14 +65,17 @@
                 </div>
           </div><!--row-->
         </main>
-
+        <div id="social">
+            <a class="facebookBtn smGlobalBtn" href="#"></a>
+            <a class="twitterBtn smGlobalBtn" href="#"></a>
+            <a class="googleplusBtn smGlobalBtn" href="#"></a>
+            <a class="tumblrBtn smGlobalBtn" href="#"></a>
+        </div>
         <footer class="fixed_footer">
-            <div id="social">
-                <a class="facebookBtn smGlobalBtn" href="#"></a>
-                <a class="twitterBtn smGlobalBtn" href="#"></a>
-                <a class="googleplusBtn smGlobalBtn" href="#"></a>
-                <a class="tumblrBtn smGlobalBtn" href="#"></a>
-            </div>
+
+            <div class="copyright">
+                <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
+            </div><!--copyright-->
         </footer>
     </section>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
