--- a/animal.html
+++ b/animal.html
@@ -35,7 +35,7 @@
             <h1 id="heading">Animal</h1>
             <h2>Feed it, don’t eat it.</h2>
         </section>
-        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>In depth</p></i></a>
+        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
