--- a/plastic-news1.html
+++ b/plastic-news1.html
@@ -31,25 +31,19 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header air">
-            <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+        <section id="header" class="header plastic">
+            <a href="plastic.html"><h1 id="heading">Plastic</h1></a>
+            <h2>日本6200米海底藏公仔頭 垃圾汙染海洋深處</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/china.png" /></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/beaco2n.png" /></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
+                <div class="col-xs-12 col-sm-12 col-lg-12 box">
+                    <p>日本神奈川縣橫須賀市的國立「海洋研究開發機構」為了喚起市民關注海洋垃圾問題，今年4月起以日本周邊為中心，發放堆積在深海的垃圾影片與照片，原來在逾6,200米深海底也藏了一個模型人頭，而海洋垃圾除了膠袋等物品，連漫畫、涼鞋也有。</p>
+                    <p>「海洋研究開發機構」匯集潛水調查船歷時30年以上的調查，至今公佈了約1,700條短片及680張照片，更附註垃圾種類、發現地點、海洋深度及周圍是否有生物等資訊。大部份海洋垃圾都是塑膠袋、金屬罐，亦有運動鞋，而模型人頭則是調查船「深海6500」於1991年7月，在日本海溝逾6,200米深處的縫隙發現，人頭上除堆積了沉積物外，亦有海洋生物。</p>
+                    <p>「海洋研究開發機構」自1980年代起，持續拍攝深海生物、地形、地質，但首次以展示垃圾為主，發言人說﹕「海洋垃圾已成為高峯會議題，成為全球性問題，將日常生活中難得一見的深海垃圾問題，藉著影片與照片讓大眾瞭解，希望能令大家重新反省海洋環保的問題。」</p>
+                    <p>海洋最深處為馬里亞納海溝深1.9萬米的海底。1998年5月無人探測機「Kaikou」，發現幾個懷疑是塑膠袋的垃圾。</p>
                 </div>
           </div><!--row-->
         </main>
