--- a/plastic-news3.html
+++ b/plastic-news3.html
@@ -31,25 +31,21 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header air">
-            <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+        <section id="header" class="header plastic">
+            <a href="plastic.html"><h1 id="heading">Plastic</h1></a>
+            <h2>日本6200米海底藏公仔頭 垃圾汙染海洋深處</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/china.png" /></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/beaco2n.png" /></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
+                <div class="col-xs-12 col-sm-12 col-lg-12 box">
+                    <p>雲林縣解決垃圾危機，同意外縣市以垃圾換底渣要求，迄今已運回5200公噸，分別置於古坑、虎尾、口湖，環保局長林長造表示，目前已有200多公噸底渣用於公共工程。</p>
+                    <p>縣議員賴明源表示，永置在古坑鄉的底渣有2172.87公噸，地方質疑有污染環境疑慮，引起民眾抗爭，要求6月底前要將底渣運除，目前僅運出200多公噸底渣，用在水利處污水下水道工程中，但距離地方要求全部清除有很大距離，民眾已揚言不排除發動抗爭。</p>
+                    <p>縣議員王又民也說，縣府多次說明「底渣」是產品，但底渣爭議是不可接觸土壤、不可接觸水源、不可種植、不可跟人群一起，就像塩酸是產品，是可以用在清潔地板上，但倒在地上就是有害廢棄物，縣府應參考鄰近縣市的作法，用不透水袋將底渣裝袋，不要污染土地，並制訂底渣存放的統一規範及標準。</p>
+                    <p>議員林聖爵也質疑環保局只因斗六市底渣不運回，就不收垃圾，讓斗六垃圾轉運站累積的號圾高達6000公噸以上，要求雲縣府要有作為。</p>
+                    <p>林長造表示，垃圾換底渣回運已積極尋求中央環保署協助調度，雲林地方公共工程也會協助去化。</p>
+                    <p>縣長李進勇也說，不一定要換回底渣，可朝向換生廚餘方向努力。</p>
                 </div>
           </div><!--row-->
         </main>
