--- a/plastic.html
+++ b/plastic.html
@@ -32,36 +32,24 @@
 
     <section class="main">
         <section id="header" class="header plastic">
-            <h1 id="heading">Plastic</h1>
+            <a href="plastic.html"><h1 id="heading">Plastic</h1></a>
             <h2>Reduce, Reuse, Recycle.</h2>
         </section>
-        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>In depth</p></i></a>
+        <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                    <span>鳥類</span>
+                    <figure><a href="plastic-news1.html"><img src="img/plastic/plastic-news1.png" /></a></figure>
+                    <span>日本6200米海底藏公仔頭 垃圾汙染海洋深處</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                    <span>看三...</span>
+                    <figure><a href="plastic-news2.html"><img src="img/plastic/plastic-news2.png" /></a></figure>
+                    <span>馬祖「藍眼淚」奇景慘遭陸垃圾汙染</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                    <span>飛天鳥</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                    <span>鳥類</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                    <span>看三...</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                    <span>飛天鳥</span>
+                    <figure><a href="plastic-news3.html"><img src="img/plastic/plastic-news3.png" /></a></figure>
+                    <span>垃圾換底渣 運林已運回5200公噸</span>
                 </div>
           </div><!--row-->
         </main>
