--- a/air-news3.html
+++ b/air-news3.html
@@ -40,7 +40,7 @@
         <main class="content" id="content">
           <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
+                    <figure><img src="img/air/india.png" /></figure>
                     <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
