Ver 1.5.1 →新增Air新聞內容頁面2則 →新增Water新聞內容頁面3則 →修正新聞內容css格式套用異常

--- a/air-news1.html
+++ b/air-news1.html
@@ -39,7 +39,7 @@
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-12 col-lg-12">
+                <div class="col-xs-12 col-sm-12 col-lg-12 box">
                   <p>在川普總統發出豪語，宣布美國將退出「巴黎氣候協定」的同時，印度能源部門卻宣布，為了對抗日益嚴重的空氣污染，預計在 2030 年後印度將只賣電動車。</p>
                   <p>CNNMoney 報導，做為開發中國家之一，印度的經濟以驚人速度成長中，但在產業與交通持續發展的情況下，嚴重的空氣污染也隨之而來，根據研究估計，空污每年約造成印度 120 萬人因喪命，甚至有醫師如此形容，「在首都新德里呼吸，就像是每天抽 10 根菸」。</p>
                   <p>不僅是空氣污染，蓬勃發展的經濟也讓印度成為全球第三大石油進口國，每年在石油上花費將近 1,500 億美元（約台幣 4.5 兆元），電動車發展將能使石油需求大幅下降，因此印度政府宣布，在 2030 年後，在印度銷售的每輛汽車都必須仰賴電力，而非石油。</p>
