--- a/air-news3.html
+++ b/air-news3.html
@@ -33,24 +33,21 @@
     <section class="main">
         <section id="header" class="header air">
             <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+            <h2>如何低成本監測空氣汙染？加州科學家提出新方法</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/india.png" /></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/china.png" /></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/air/beaco2n.png" /></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-lg-12 box">
+              <p>要了解某個地區的污染狀況，科學家們需要大量資料。由於污染監測裝置相對昂貴，每個城市僅能設定為數不多的監測點。近日，海灣地區的科學家們想出兩種監控污染的新方法。一種是在學校和博物館樓頂安裝便宜的感測器，以監控七種不同污染源；另一種是在 Google 街景車上配備污染感測器，以繪製詳細的污染地圖。</p>
+              <p>在穿越加州洛杉磯、奧克蘭、中央山谷時，Google 街景車會收集空氣，進行初步分析。「行動監控不是什麼新事物，但是，當你把感測器放到專業人士每日駕駛的汽車上，一切都變得非常簡單，」德州大學環境科學家 Joshua Apte 對 Wired 網站說。目前，他與 Google、Aclima 和美國環保合作，對 Google 街景車收集的資料進行分析。</p>
+              <p>為繪製詳細的污染地圖，街景車必須重複走過每條路。只有這樣，科學家才能搞清抓取精確資料所需的天數。污染地圖展示出高污染熱點、特殊交匯點等資訊。「當我們看到一個熱點後，我們就去調查原因，因為汽車上配置高精度的鏡頭。」</p>
+              <p>與此同時，另一組研究人員的專案也在進行。他們把感測器放到學校和博物館屋頂上，嘗試揭示不同時間段的污染變化情況。該專案的名字是 BEACO2N，由加州大學柏克萊分校的大氣化學家 Ron Cohen 發起。最初，BEACO2N 想偵測加州環保法案的效果，不過，它很快就變成一項公用衛生專案。</p>
+              <p>從一開始，Ron Cohen 就決定使用廉價的感測器。這些感測器精準度不高，但是，當它們組成網路後，Cohen 可以比較資訊，得出精確的資料。Cohen 表示，透過這些測試，他可以判斷某個地區的主要污染源是什麼。</p>
+              <p>雖然兩個團隊採取不同方法，但是，他們都希望，政策制定者、城市規劃者和醫療保健提供者能用這些工具，對抗氣候變化，改善人們的生活。Cohen 正與公用健康科學家合作，探索疾病與污染的關係，將 BEACO2N 應用到醫療領域，而 Aclima 公司與流行病學家展開合作，研究污染熱點附近的健康問題。</p>
+              <p>Cohen 預測，今後感測器網路將不斷擴大。可能裝在汽車上，也有可能放到各種建築物上。Google 街景團隊表示贊同。「我們在奧克蘭做這件事情，」 Apte 說，「不過，我們將奧克蘭看做一個面向全球的實驗室。」</p>
+            </div>
           </div><!--row-->
         </main>
         <div id="social">
