--- a/plastic-news3.html
+++ b/plastic-news3.html
@@ -33,7 +33,7 @@
     <section class="main">
         <section id="header" class="header plastic">
             <a href="plastic.html"><h1 id="heading">Plastic</h1></a>
-            <h2>日本6200米海底藏公仔頭 垃圾汙染海洋深處</h2>
+            <h2>垃圾換底渣 運林已運回5200公噸</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
