--- a/water-news1.html
+++ b/water-news1.html
@@ -31,25 +31,19 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header air">
-            <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+        <section id="header" class="header water">
+            <a href="water.html"><h1 id="heading">Water</h1></a>
+            <h2>環南市場廢水 汙染河川達半年</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news2.html"><img src="img/air/china.png" /></a></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news3.html"><img src="img/air/beaco2n.png" /></a></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
+                <div class="col-xs-12 col-sm-12 col-lg-12 box">
+                  <p>台北市最大的批發零售市場「環南市場」，被爆垃圾集中場的廢水，沒有經過妥善處理，就直接排入河裡、汙染河川，而且時間長達半年，台北市環保局稽查後封閉地面孔洞，依「水汙法」開罰市場自治會3萬元，並要求7月4號前重新接管，否則將再開罰。</p>
+                  <p>菜渣、垃圾堆滿集中場，原本廢水應該流入截留槽，透過衛工管線，進入污水廠處理後，再流入河川，不過卻從地面孔洞，排入箱涵，直接流進河川，依水汙法開罰3萬元。</p>
+                  <p>環保局稽查人員，以食用色素當追蹤劑，確實發現，廢水並沒有依照程序處理，造成河川污染，環南市場解釋，是為了讓積水順利排除，鑿洞時並不知道，下面就是箱涵。</p>
+                  <p>目前已將孔洞封閉，預計下週三天氣好轉後，會再發包改善排水孔道，環保局推估，廢水直接流入河川，時間已經超過半年，勒令要求7月4號前重新接管，否則再依法開罰3萬到3百萬。</p>
                 </div>
           </div><!--row-->
         </main>
