--- a/water-news3.html
+++ b/water-news3.html
@@ -31,26 +31,19 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header air">
-            <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+        <section id="header" class="header water">
+            <a href="water.html"><h1 id="heading">Water</h1></a>
+            <h2>生命力強韌抵不過污染 田蚌幾從雲林河川消失</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news2.html"><img src="img/air/china.png" /></a></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news3.html"><img src="img/air/beaco2n.png" /></a></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-lg-12 box">
+              <p>曾是雲林河川隨處可捕捉的田蚌，幾乎從河裡消失，從事物種復育的生態專家許春德20餘年前在北港溪還可找到田蚌，現在已不見蹤影，他懷疑河川污染造成生命力強韌的田蚌消失。</p>
+              <p>田蚌過去是河川最常見的貝類，白雲自然生態研究協會理事長許春德20餘年前復育本土物種，曾在北港溪找到田蚌，但這幾年不僅北港溪找不到，其他河川也未在見到田蚌蹤跡，僅剩水庫還可以發現，馬蹄蛤主題館長曾界崇也發現目前雲林沿海還可以找到田蚌的地方，多半集中在口湖、四湖等閒置的鰻魚魚塭。</p>
+              <p>許春德認為，田蚌生命力相當強韌，在河川消失的原因與水質過度污染有關；曾界崇指出，大肆人為開發，將埤塘填為土地利用，也是威脅田蚌生存原因之一，對生態保育是警訊。</p>
+            </div>
           </div><!--row-->
         </main>
         <div id="social">
