--- a/water.html
+++ b/water.html
@@ -32,7 +32,7 @@
 
     <section class="main">
         <section id="header" class="header water">
-            <h1 id="heading">Water</h1>
+            <a href="water.html"><h1 id="heading">Water</h1></a>
             <h2>If you pollute WATER, you pollute LIFE.</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
@@ -40,28 +40,16 @@
         <main class="content" id="content">
           <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="img/water/market.jpg" /></figure>
-                    <span>環南市場廢水</span>
+                    <figure><a href="water-news1.html"><img src="img/water/market.png" /></a></figure>
+                    <span>環南市場廢水 汙染河川達半年</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                    <span>看三...</span>
+                    <figure><a href="water-news2.html"><img src="img/water/popsicles.png" /></a></figure>
+                    <span>台灣大學生製作一百支汙水冰棒 好看但不能吃</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                    <span>飛天鳥</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic01.jpg" /></figure>
-                    <span>鳥類</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic02.jpg" /></figure>
-                    <span>看三...</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><img src="http://nxworld.net/codepen/css-image-hover-effects/pic03.jpg" /></figure>
-                    <span>飛天鳥</span>
+                    <figure><a href="water-news3.html"><img src="img/water/yunlin.png" /></a></figure>
+                    <span>生命力強韌抵不過污染 田蚌幾從雲林河川消失</span>
                 </div>
           </div><!--row-->
         </main>
