--- a/water-news2.html
+++ b/water-news2.html
@@ -31,26 +31,22 @@
     </nav>
 
     <section class="main">
-        <section id="header" class="header air">
-            <a href="air.html"><h1 id="heading">Air</h1></a>
-            <h2>Everyone has a right to clean air.</h2>
+        <section id="header" class="header water">
+            <a href="water.html"><h1 id="heading">Water</h1></a>
+            <h2>台灣大學生製作一百支汙水冰棒 好看但不能吃</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news1.html"><img src="img/air/india.png" /></a></figure>
-                    <span>對抗空氣汙染，印度政府：2030年後只賣電動車</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news2.html"><img src="img/air/china.png" /></a></figure>
-                    <span>中國北方近1.4萬企業未達空氣污染控制標準</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="air-news3.html"><img src="img/air/beaco2n.png" /></a></figure>
-                    <span>如何低成本監測空氣汙染？加州科學家提出新方法</span>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-lg-12 box">
+              <p>玲瓏剔透的淡紅色冰棒，內裏似乎包有果肉和蒟蒻，加上色彩鮮艷的幾何圖形包裝，外觀相當吸引，可惜它們卻是由污水製成。</p>
+              <p>這些由「100%純污水製冰所」出產的冰棒是三位台灣大學生以污水製成的畢業作品，除了早前於網絡廣受注目，近日更連獲「2017有章藝術博物館典藏獎」和「2017金點新秀設計獎－視覺傳達設計類」。</p>
+              <h2>標榜「100%純污水」　將污染物轉化成創作</h2>
+              <p>以「環境污染」為題材創作的例子近年也有不少，例如美國攝影師 J. Henry Fair 曾花上十年走訪世界各地，在小型飛機拍出的一系列工業污染下的抽象照，還有非洲攝影師 Fabrice Monteiro 為反思垃圾污染而創作的時尚攝影系列等等。不過，早前由洪亦辰、郭怡慧和鄭毓迪三位大學生創作的「100%純污水製冰所」卻有些不同。同樣是說環境污染，但創作媒介卻用上「冰棒」，與兩年前中國行為藝術家「堅果兄弟」將在北京街頭所收集灰塵製作成「霧霾磚頭」的《塵埃計劃》有些相似，他們都是將污染物轉化為藝術創作。</p>
+              <p>「100%純污水製冰所」是三位國立台灣藝術大學視覺傳達系學生的畢業作。由構思到創作的一年間，她們到訪了台灣不同地區，在湖泊、河流、海灘、港口，甚至是溝渠等地方收集了一百個樣本，然後將污水樣本放在雪櫃中冷凍成冰棒，再按污染程度分類成《台灣百大污染水源冰品圖鑑》。</p>
+              <p>要長期保存冰棒本身就相當困難，而要保存一百條由污水製成，帶有小蟲、塑膠、垃圾和廢水染料的冰棒，過程就必定更加艱辛，相信存放藝術品的冰櫃所發出的惡臭也會非常難頂。由於作品難以保存，加上希望在展覽中展出，她們後來又用樹脂按原作品復刻成相同大小的塑膠模型。</p>
+            </div>
           </div><!--row-->
         </main>
         <div id="social">
