--- a/animal-news3.html
+++ b/animal-news3.html
@@ -33,24 +33,19 @@
     <section class="main">
         <section id="header" class="header animal">
             <a href="animal.html"><h1 id="heading">Animal</h1></a>
-            <h2>Feed it, don’t eat it.</h2>
+            <h2>瀕臨絕種！ 八里海岸喜見15隻黑面琵鷺</h2>
         </section>
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
           <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news1.html"><img src="img/animal/fun.png" /></a></figure>
-                    <span>想當動物保育員 快來動物FUN城市</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news2.html"><img src="img/animal/pet.png" /></a></figure>
-                    <span>桃猿首創「愛PET趴」球場開放動物認養</span>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="animal-news3.html"><img src="img/animal/spoonbill.png" /></a></figure>
-                    <span>瀕臨絕種！ 八里海岸喜見15隻黑面琵鷺</span>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-lg-12 box">
+                <p>黑面琵鷺是全球瀕危鳥種，總數量不超過3000隻，在台灣為一級保育類野生動物。新北市八里海岸近日喜見15隻黑面琵鷺在天空飛翔，吸引許多民眾目光佇留。新北市動保處表示，現在正值黑面琵鷺春天北返的季節，在北返前會密集覓食，八里海岸及挖仔尾紅樹林區擁有豐富的各種生物，吸引他們短暫棲息。</p>
+                <p>黑面琵鷺偏好在夜間活動，白天大都群聚在空曠處及不易受干擾的海岸灘地休息。飛行時其頸部會伸直，姿態優雅，又被稱為『黑面舞者』。覓食時多成小群集體覓食，長長的嘴喙略張開，伸入水中左右擺動尋找，捕食小型的魚類和蝦，模樣煞是可愛。</p>
+                <p>去年11月現正值候鳥過境的季節，有6隻黑面琵鷺和1隻白琵鷺現身金山地區，其中1隻黑面琵鷺腳上甚至帶有標放的腳環，八里海岸近日亦出現15隻黑面琵鷺棲息停留。</p>
+                <p>據過往紀錄，這幾年在金山的生態農田、八里挖仔尾紅樹林都可以見到黑面琵鷺的蹤跡，牠們在這些地方覓食、休息、理羽、洗澡等。由於這裡的生態豐富，食物種類多，包含彈塗魚、招潮蟹等，常吸引過境鳥及侯鳥在此棲息，也成為欣賞過境鳥的重要賞鳥據點。</p>
+                <p>動保處提醒，依據野生動物保育法規定，任何人均不得無故騷擾保育類野生動物，遵守呼籲賞鳥民眾，不接觸、不餵食、不驚嚇秩序，否則將可處30萬元罰金併科1年以下有期徒刑。</p>
+            </div>
           </div><!--row-->
         </main>
         <div id="social">
