--- a/store.html
+++ b/store.html
@@ -16,6 +16,7 @@
     <a href="index.html" id="home-trigger">
         <i class="fa fa-home fa-5x" aria-hidden="true"></i>
     </a>
+    <div id="displayname"></div>
     <div id="nav-trigger" class="nav-trigger open">
         <span class="line"></span>
         <span class="line"></span>
@@ -45,7 +46,7 @@
                 </div>
             </div>
             <div id="products" class="row list-group">
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6 col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item01.jpg" alt="" />
                         <div class="caption">
@@ -66,7 +67,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6  col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item02.jpg" alt="" />
                         <div class="caption">
@@ -87,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6 col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item03.jpg" alt="" />
                         <div class="caption">
@@ -108,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6 col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item04.jpg" alt="" />
                         <div class="caption">
@@ -129,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6 col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item05.jpg" alt="" />
                         <div class="caption">
@@ -150,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item  col-xs-6 col-lg-4">
+                <div class="item col-xs-6 col-md-6 col-lg-4">
                     <div class="thumbnail">
                         <img class="group list-group-image" src="img/store/item06.jpg" alt="" />
                         <div class="caption">
@@ -173,8 +174,11 @@
                 </div>
             </div>
         </div>
-
+        <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');">
+    由此開啟一個新視窗
+    </div>
     </main>
+
 
     <footer class="fixed_footer">
 
@@ -191,10 +195,11 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js">
-    </script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.scrollTo.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/member.js"></script>
 </body>
 <!--Navbar https://codepen.io/rachsmith/pen/IsixL -->
 <!--Scroll Arrow https://codepen.io/FilipVitas/pen/qZpXZr -->
