--- a/index.html
+++ b/index.html
@@ -74,16 +74,18 @@
     </main>-->
 
     <footer class="fixed_footer">
-
         <div class="copyright">
             <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-        </div><!--copyright-->
-    </footer><div id="social">
+        </div>
+        <!--copyright-->
+    </footer>
+    <div id="social">
         <a class="facebookBtn smGlobalBtn" href="#"></a>
         <a class="twitterBtn smGlobalBtn" href="#"></a>
         <a class="googleplusBtn smGlobalBtn" href="#"></a>
         <a class="tumblrBtn smGlobalBtn" href="#"></a>
     </div>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/script.js"></script>
