--- a/plastic.html
+++ b/plastic.html
@@ -22,11 +22,11 @@
     </div>
     <nav id="nav" class="out">
         <ul>
-          <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
-          <li><a href="air.html"><span class="nav-label">Air</span></a></li>
-          <li><a href="water.html"><span class="nav-label">Water</span></a></li>
-          <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
-          <li><a href="store.html"><span class="nav-label">Store</span></a></li>
+            <li><a href="plastic.html"><span class="nav-label">Plastic</span></span></a></li>
+            <li><a href="air.html"><span class="nav-label">Air</span></a></li>
+            <li><a href="water.html"><span class="nav-label">Water</span></a></li>
+            <li><a href="animal.html"><span class="nav-label">Animal</span></a></li>
+            <li><a href="store.html"><span class="nav-label">Store</span></a></li>
         </ul>
     </nav>
 
@@ -38,20 +38,28 @@
         <a id="topArrow"><i class="fa fa-angle-down fa-inverse fa-5x"><p>More</p></i></a>
         <!--<main class="content"></main>-->
         <main class="content" id="content">
-          <div class="row">
+            <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="plastic-news1.html"><img src="img/plastic/plastic-news1.png" /></a></figure>
+                    <figure>
+                        <a href="plastic-news1.html"><img src="img/plastic/plastic-news1.png" /></a>
+                    </figure>
                     <span>日本6200米海底藏公仔頭 垃圾汙染海洋深處</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="plastic-news2.html"><img src="img/plastic/plastic-news2.png" /></a></figure>
+                    <figure>
+                        <a href="plastic-news2.html"><img src="img/plastic/plastic-news2.png" /></a>
+                    </figure>
                     <span>馬祖「藍眼淚」奇景慘遭陸垃圾汙染</span>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-lg-4 box">
-                    <figure><a href="plastic-news3.html"><img src="img/plastic/plastic-news3.png" /></a></figure>
+                    <figure>
+                        <a href="plastic-news3.html"><img src="img/plastic/plastic-news3.png" /></a>
+                    </figure>
                     <span>垃圾換底渣 運林已運回5200公噸</span>
                 </div>
-          </div><!--row-->
+            </div>
+
+            <!--row-->
         </main>
         <div id="social">
             <a class="facebookBtn smGlobalBtn" href="#"></a>
@@ -60,14 +68,16 @@
             <a class="tumblrBtn smGlobalBtn" href="#"></a>
         </div>
         <footer class="fixed_footer">
-
             <div class="copyright">
                 <p class="credit">&copy;2017 NTUT CSIE | Gemini翔 | Bonis | 方糖</p>
-            </div><!--copyright-->
+            </div>
+            <!--copyright-->
         </footer>
     </section>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/bootstrap.min.js"> </script>
+    <script src="js/bootstrap.min.js">
+    </script>
     <script src="js/jquery.scrollTo.min.js"></script>
     <script src="js/script.js"></script>
 </body>
