--- a/store.html
+++ b/store.html
@@ -175,8 +175,8 @@
             </div>
         </div>
         <div onclick="window.open('member.html',config='height=700,width=700,toolbar=no');">
-    由此開啟一個新視窗
-    </div>
+          加入會員
+        </div>
     </main>
 
 
@@ -193,6 +193,7 @@
         <a class="googleplusBtn smGlobalBtn" href="#"></a>
         <a class="tumblrBtn smGlobalBtn" href="#"></a>
     </div>
+    <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Ff416720001.github.io%2FFinal_Project%2F&layout=button_count&size=small&mobile_iframe=true&width=74&height=20&appId" width="74" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
